# HRMonitor

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/backend/: Cargo.toml  Dockerfile
apps/backend/migrations/: 20260329000000_initial_schema.sql  20260331000000_minute_aggregates.sql  20260401100000_pulsoid_oauth.sql  20260406000000_heart_rate_visibility.sql
apps/backend/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  pulsoid_oauth.rs  token_encryption.rs  worker.rs  worker_manager.rs
apps/backend/src/handlers/: groups.rs  heart_rates.rs  mod.rs  oauth.rs  tokens.rs  users.rs  utils.rs  ws.rs
apps/frontend/: Dockerfile  custom-server.js  next.config.ts  package-lock.json  package.json
apps/frontend/src/: middleware.ts  proxy.ts
apps/frontend/src/app/: layout.tsx
apps/frontend/src/app/(protected)/: auth-providers.tsx  layout.tsx
apps/frontend/src/app/(protected)/dashboard/: page.tsx
apps/frontend/src/app/(protected)/groups/: layout.tsx  page.tsx
apps/frontend/src/app/(protected)/groups/[id]/: page.tsx
apps/frontend/src/app/(protected)/me/: page.tsx
apps/frontend/src/app/(protected)/settings/: page.tsx
apps/frontend/src/app/(protected)/users/: page.tsx
apps/frontend/src/app/(protected)/users/[id]/: page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/invite/[token]/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/settings/: page.tsx
apps/frontend/src/app/users/: page.tsx
apps/frontend/src/app/users/[id]/: page.tsx
apps/frontend/src/components/: add-token-form.tsx  all-users-heart-rate-chart.tsx  daily-stats.tsx  groups-list-view.tsx  heart-rate-chart.tsx  navbar.tsx  pulsoid-token.tsx  shared-users-view.tsx  sub-nav.tsx  token-list.tsx  user-avatar.tsx  user-detail-view.tsx  user-menu.tsx
apps/frontend/src/hooks/: use-in-view.ts
apps/frontend/src/lib/: api.ts  auth.ts  groups-api.ts  protected-routes.ts  ws.ts
apps/nginx/: nginx.conf
backend/: Cargo.toml  Dockerfile  Dockerfile.pulsoid-ingest
backend/api-backend/: Cargo.toml  Dockerfile
backend/api-backend/migrations/: 20260406000000_heart_rate_visibility.sql
backend/api-backend/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  pulsoid_oauth.rs  validation.rs  worker.rs
backend/api-backend/src/handlers/: groups.rs  heart_rates.rs  mod.rs  oauth.rs  tokens.rs  users.rs  utils.rs  ws.rs
backend/common/: Cargo.toml
backend/common/src/: access.rs  auth.rs  error.rs  lib.rs  messages.rs  nats_backoff.rs  pulsoid_oauth.rs  pulsoid_state.rs  redis_keys.rs  signal.rs  time.rs  visibility.rs
backend/migration/: Cargo.toml  Dockerfile
backend/migration/migrations/: 20260331000000_minute_aggregates.sql  20260331000001_backfill_minute_aggregates.sql  20260401000000_auth_tables.sql  20260401100000_pulsoid_oauth.sql  20260403000000_drop_legacy_pulsoid_token.sql  20260407000000_share_groups.sql  20260409000000_add_config_version.sql  20260409000000_add_revision.sql  20260409000001_add_refresh_blocked.sql  20260409000002_add_connection_state.sql  20260409000003_config_version_sequence.sql  20260409000003_revision_sequence.sql  20260413000000_pulsoid_refresh_scanner_index.sql
backend/migration/src/: main.rs
backend/pulsoid-ingest/: Cargo.toml  Dockerfile
backend/pulsoid-ingest/src/: main.rs  models.rs  worker.rs  worker_manager.rs
backend/pulsoid-refresher/: Cargo.toml  Dockerfile
backend/pulsoid-refresher/src/: main.rs  refresh.rs  scanner.rs
backend/src/: auth.rs  broadcast.rs  db.rs  token_encryption.rs
backend/src/handlers/: heart_rates.rs  tokens.rs  ws.rs
backend/ws-gateway/: Cargo.toml  Dockerfile
backend/ws-gateway/src/: main.rs  ws.rs
docs/: agent_prompt.md  api.md  architecture.md  schema.sql
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/scripts/: check-protected-routes.mjs
frontend/src/app/: layout.tsx
frontend/src/app/(protected)/groups/[id]/: page.tsx
frontend/src/app/(protected)/settings/: page.tsx
frontend/src/app/(protected)/users/: page.tsx
frontend/src/app/(protected)/users/[id]/: page.tsx
frontend/src/app/api/healthz/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: daily-stats.tsx  group-heart-rate-chart.tsx  groups-list-view.tsx  heart-rate-chart.tsx  pulsoid-token.tsx  timezone-select.tsx  user-avatar.tsx  user-detail-view.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: next-auth.d.ts
nginx/: nginx.conf
