[package]
name = "hrmonitor_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
tower-http = { version = "0.6.8", features = ["cors"] }
chrono = "0.4.44"
redis = { version = "0.32", features = ["tokio-comp", "aio"] }
