[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
urlencoding = "2.1.3"
