[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["signal", "macros", "rt"], optional = true }
futures-util = { version = "0.3.32", optional = true }
tokio-util = { version = "0.7.18", optional = true }
reqwest = { version = "0.13.2", features = ["json", "form"], optional = true }
urlencoding = { version = "2.1.3", optional = true }
axum = { version = "0.8.8", optional = true }

[features]
oauth = ["dep:reqwest", "dep:urlencoding"]
signal = ["dep:tokio", "dep:futures-util", "dep:tokio-util"]
web = ["dep:axum"]
