[package]
name = "pulsoid-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common", features = ["signal"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
async-nats = "0.47.0"
redis = { version = "1.1.0", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
